--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </style>
 </head>
 <body>
-  <h1>Multiplayer-dsfgdsfgdsfgTest</h1>
+  <h1>Multiplayer-ddfgd................gTest</h1>
   <div id="circle"></div>
   <button id="toggle">🔴 Farbe ändern</button>
 
